--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "ajax": "^0.0.4",
+    "axios": "^1.6.3",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.69.6"
   },
   "devDependencies": {
